[package]
name = "ehttpd"
version = "0.4.0"
edition = "2021"
authors = ["KizzyCode Software Labs./Keziah Biermann <development@kizzycode.de>"]
keywords = []
categories = []
description = "A thread-based HTTP server library, which can be used to create custom HTTP server applications"
license = "BSD-2-Clause OR MIT"
repository = "https://github.com/KizzyCode/ehttpd-rust"
readme = "README.md"


[badges]
appveyor = { repository = "KizzyCode/ehttpd-rust" }


[features]
default = []


[dependencies]
flume = { version = "0.10.14", default-features = false }


[profile.release]
overflow-checks = true

[profile.bench]
overflow-checks = true
