[package]
name = "ehttpd"
version = "0.13.0"
edition = "2024"
authors = ["KizzyCode Software Labs./Keziah Biermann <development@kizzycode.de>"]
keywords = []
categories = []
description = "A HTTP server nano-framework, which can be used to create custom HTTP server applications"
license = "BSD-2-Clause OR MIT"
repository = "https://github.com/KizzyCode/ehttpd-rust"
readme = "README.md"


[badges]
appveyor = { repository = "KizzyCode/ehttpd-rust" }


[features]
default = ["server"]
server = ["dep:flume"]


[dependencies]
flume = { version = "0.12.0", default-features = false, optional = true }


[profile.release]
overflow-checks = true
lto = "fat"

[profile.bench]
overflow-checks = true
lto = "fat"
